# demo-cabal-reproducibility-issue

./: .gitignore  README.md  build.sh
mypackage/: mypackage.cabal
mypackage/exe/: Main.hs
mypackage/src/: MyLib.chs
