cabal-version:      2.4
name:               mypackage
version:            0.1.0.0

library
    exposed-modules:  MyLib
    build-depends:    base ^>=4.14.1.0
    includes:         myclib.h
    extra-libraries:  myclib
    hs-source-dirs:   src
    default-language: Haskell2010

executable main
    main-is:          Main.hs
    build-depends:    base ^>=4.14.1.0, mypackage
    hs-source-dirs:   exe
    default-language: Haskell2010
